--- a/style.css
+++ b/style.css
@@ -1,4 +1,129 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+#navbar{
+    position:fixed;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-right: 5vw;
+    
+}
+
+#logo{
+    color: yellow;
+    height: 100%;
+    font-size: 2em;
+    margin-left: 6vw;
+}
+
+#menu{
+    display: flex;
+    color: white;
+    height: 100%;
+    margin-right: 6vw;
+}
+
+.menu-item{
+    padding: 15px;
+    cursor: pointer;
+}
+
+.hidden{
+    display: none;
+    color: white;
+}
+
+header{
+    height: 113vh;
+    display: block;
+    background-image: url('https://blackrockdigital.github.io/startbootstrap-agency/img/header-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: scroll;
+}
+
+#container{
+    width: 100%;
+    height: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/* header{
+    height: 100px;
+    color: yellow;
+    border: 1px solid yellow;
+    width: 100%;
+} */
+
+@media(min-width: 576px){
+    #container{
+        max-width: 540px;
+    }
+    #navbar{
+        background-color: #212529;
+    }
+    .hidden{
+        display: block;
+    }
+    #menu{
+        display: none;
+    }
+}
+
+@media(min-width: 768px){
+    #container{
+        max-width: 720px;
+    }
+    #navbar{
+        background-color: #212529;
+    }
+    .hidden{
+        display: block;
+    }
+    #menu{
+        display: none;
+    }
+}
+
+@media (min-width: 992px){
+    #container{
+        max-width: 960px;
+    }
+    #navbar{
+        padding-top: 25px;
+        padding-bottom: 25px;
+        background-color: transparent;
+    }
+    .hidden{
+        display: none;
+    }
+    #menu{
+        display: flex;
+    }
+}
+
+@media (min-width: 1200px){
+    #container{
+        max-width: 1140;
+    }
+    #navbar{
+        padding-top: 25px;
+        padding-bottom: 25px;
+        background-color: transparent;
+    }
+    .hidden{
+        display: none;
+    }
+    #menu{
+        display: flex;
+    }
 }
